# zero-mv

./: .gitignore  README.md  clean.sh  config.yaml.example  pyproject.toml  setup.sh  setup_dreamgaussian.sh  validate_dreamgaussian.py
src/zero_mv/: cli.py  zero123pp.py
src/zero_mv/utils/: cameras.py  devices.py  image.py
